# db-auto-pilot

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  Spec.md  flake.nix  run-app.command
backend/: pyproject.toml
backend/app/: config.py  desktop.py  main.py  repository.py  schemas.py
backend/app/services/: __init__.py  ingestion.py  materialization.py  materialization_runner.py  proposals.py  querying.py
backend/db_auto_pilot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api.py  test_services.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
scripts/: build-backend-sidecar.sh
