[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db-auto-pilot-backend"
version = "0.1.0"
description = "Backend API for db-auto-pilot"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.9",
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "openai>=1.51.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
]
desktop = [
  "pyinstaller>=6.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]
